# He-Forge-TDX

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  sector_flow.bat  setup_tdx_path.bat  tdx.py
.agents/skills/tdx-direct-use/: SKILL.md  run_tdx.py
.agents/skills/tdx-direct-use/scripts/: refresh_bundle.py
docs/interfaces/: BASIC_TQ_SMOKE_2026-06-25.md  PARAMETERS.md  README.md  TEST_STATUS.md
lib/: __init__.py  config.py  tdx_unified.py  tq_constants.py  tqcenter.py
lib/cli/: __init__.py  basic_tq_smoke.py  runtime.py
lib/formula/: __init__.py  helpers.py
lib/pathing/: __init__.py  config_store.py  discovery.py
samples/: print_to_tdx_sample.csv
scripts/: README.md  __init__.py  _bootstrap.py  _formula_helpers.py  clear_sector.py  create_sector.py  delete_sector.py  diagnose_tdx_path.py  download_file.py  exec_to_tdx.py  formula_exp.py  formula_format_data.py  formula_get_all.py  formula_get_data.py  formula_get_info.py  formula_process_mul_exp.py  formula_process_mul_xg.py  formula_process_mul_zb.py  formula_set_data.py  formula_set_data_info.py  formula_xg.py  formula_zb.py  get_bkjy_value.py  get_bkjy_value_by_date.py  get_divid_factors.py  get_financial_data.py  get_financial_data_by_date.py  get_gb_info.py  get_gb_info_by_date.py  get_gp_one_data.py  get_gpjy_value.py  get_gpjy_value_by_date.py  get_ipo_info.py  get_kzz_info.py  get_market_data.py  get_market_snapshot.py  get_match_stkinfo.py  get_more_info.py  get_pricevol.py  get_relation.py  (+26 more)
scripts/diagnostics/: get_market_snapshot_reconnect.py  get_more_info_reconnect.py  run_basic_tq_smoke.py
tests/: test_cli_help.py  test_cli_runtime.py  test_config_store.py  test_diagnose_tdx_path.py  test_get_market_snapshot_reconnect.py  test_get_more_info_reconnect.py  test_pathing_discovery.py  test_skill_bundle.py  test_tq_constants.py  test_unified_cli.py
